V6389: Fix during CompList

--- a/Prevu.Synoptics.V6389_Forever_Plast/PlantView.xaml
+++ b/Prevu.Synoptics.V6389_Forever_Plast/PlantView.xaml
@@ -14,11 +14,9 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" >
     <Canvas Height="850" Width="1550" >
-        <Machines:QX_ShortElectricalCabinet Width="54" Height="64" Canvas.Left="578" Canvas.Top="454" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:QX_HMI Height="66" Width="56" Canvas.Left="577" Canvas.Top="587" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:QX_HMI Height="66" Width="56" Canvas.Left="577" Canvas.Top="495" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="ESTOP-AREA-01" Canvas.Left="412" Canvas.Top="213" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="Q01" Canvas.Left="560" Canvas.Top="390" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="HMI-01" Canvas.Left="560" Canvas.Top="539" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="HMI-01" Canvas.Left="560" Canvas.Top="447" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="OEE-WATER" Canvas.Left="560" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="OEE-POWER" Canvas.Left="560" Canvas.Top="238" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="813" Canvas.Top="271" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
