--- a/Prevu.Synoptics.V3001-COVERIS/P350.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P350.xaml
@@ -8,11 +8,21 @@
              x:Class="Prevu.Synoptics.P350" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
   <Grid Margin="-1,0,1,0">
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1120,382,0,0" VerticalAlignment="Top" Width="45" Color="Water" StatusComponent="377-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1201,382,0,0" VerticalAlignment="Top" Width="69" Color="Water" StatusComponent="377-01-MA1" VisibilityComponent="377-21-CV1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="892,346,0,0" VerticalAlignment="Top" Color="Water" Width="48" RenderTransformOrigin="0.5,0.5" StatusComponent="377-01-MA1" VisibilityComponent="">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1120,385,0,0" VerticalAlignment="Top" Width="45" Color="Water" StatusComponent="377-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1201,385,0,0" VerticalAlignment="Top" Width="69" Color="Water" StatusComponent="377-01-MA1" VisibilityComponent="377-21-CV1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="570,261,0,0" VerticalAlignment="Top" Width="114" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="359-21-CV1" Height="5"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="569,180,0,0" VerticalAlignment="Top" Width="139" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="479,493,0,0" VerticalAlignment="Top" Color="Water" Width="358" RenderTransformOrigin="0.5,0.5" StatusComponent="370-26-CV1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="618,354,0,0" VerticalAlignment="Top" Color="Water" Width="80" RenderTransformOrigin="0.5,0.5" StatusComponent="370-26-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -43,7 +53,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="675,226,0,0" VerticalAlignment="Top" Color="Water" Width="256" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="675,188,0,0" VerticalAlignment="Top" Color="Water" Width="256" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -66,7 +76,7 @@
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" Margin="872,165,0,0" VerticalAlignment="Top" Width="235" StatusComponent="350-01-MA1" PipeHeight="Medium"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="570,59,0,0" VerticalAlignment="Top" Width="170" StatusComponent="336-01-MA1" PipeHeight="Medium" Height="10"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1120,345,0,0" VerticalAlignment="Top" Width="43" Color="Water" StatusComponent="377-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1120,348,0,0" VerticalAlignment="Top" Width="43" Color="Water" StatusComponent="377-01-MA1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="522,552,0,0" VerticalAlignment="Top" Color="Water" Width="218" RenderTransformOrigin="0.5,0.5" StatusComponent="373-01-MA1" VisibilitySignal="" VisibilityComponent="370-25-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -111,7 +121,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="912,503,0,0" VerticalAlignment="Top" Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="386-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="908,503,0,0" VerticalAlignment="Top" Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="386-01-MA1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -141,8 +151,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="908,365,0,0" VerticalAlignment="Top" Width="212" Color="Water" StatusComponent="377-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="998,497,0,0" VerticalAlignment="Top" Color="Water" Width="272" RenderTransformOrigin="0.5,0.5" StatusComponent="377-01-MA1" VisibilityComponent="377-21-CV1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="915,368,0,0" VerticalAlignment="Top" Width="205" Color="Water" StatusComponent="377-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1013,497,0,0" VerticalAlignment="Top" Color="Water" Width="257" RenderTransformOrigin="0.5,0.5" StatusComponent="377-01-MA1" VisibilityComponent="377-21-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -152,7 +162,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="976,519,0,0" VerticalAlignment="Top" Color="Water" Width="48" RenderTransformOrigin="0.5,0.5" StatusComponent="377-01-MA1" VisibilityComponent="377-21-CV1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="991,519,0,0" VerticalAlignment="Top" Color="Water" Width="48" RenderTransformOrigin="0.5,0.5" StatusComponent="377-01-MA1" VisibilityComponent="377-21-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -182,7 +192,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1209,439,0,0" VerticalAlignment="Top" Width="119" Color="Water" StatusComponent="377-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="377-21-CV1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1210,441,0,0" VerticalAlignment="Top" Width="117" Color="Water" StatusComponent="377-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="377-21-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -194,9 +204,9 @@
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" Margin="195,445,0,0" VerticalAlignment="Top" Color="Water" Width="187" StatusComponent="373-01-MA1" VisibilityComponent="370-25-CV1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="100,0,0,0" VerticalAlignment="Center" Color="Water" Width="100" StatusComponent="373-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1193,345,0,0" VerticalAlignment="Top" Width="84" Color="Water" StatusComponent="377-01-MA1" VisibilityComponent="377-23-CV1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1193,348,0,0" VerticalAlignment="Top" Width="84" Color="Water" StatusComponent="377-01-MA1" VisibilityComponent="377-23-CV1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="273,316,0,0" VerticalAlignment="Top" Color="Water" Width="109" StatusComponent="390-71-EC1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="903,446,0,0" VerticalAlignment="Top" Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="386-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="899,446,0,0" VerticalAlignment="Top" Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="386-01-MA1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -239,8 +249,8 @@
         </TransformGroup>
       </d:Rectangle.RenderTransform>
     </Rectangle>
-    <Rectangle HorizontalAlignment="Left" Height="53" Margin="1117,342,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5"/>
-    <Rectangle HorizontalAlignment="Left" Height="41" Margin="1275,327,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5"/>
+    <Rectangle HorizontalAlignment="Left" Height="53" Margin="1117,345,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5"/>
+    <Rectangle HorizontalAlignment="Left" Height="41" Margin="1275,330,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5"/>
     <Ellipse HorizontalAlignment="Left" Height="16" Margin="190,631,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
     <Ellipse HorizontalAlignment="Left" Height="16" Margin="190,487,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
     <Ellipse HorizontalAlignment="Left" Height="16" Margin="385,685,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
@@ -255,7 +265,7 @@
         </TransformGroup>
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
-    <Machines:CV_Valve HorizontalAlignment="Left" Margin="1135,296,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
+    <Machines:CV_Valve HorizontalAlignment="Left" Margin="1135,299,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
       <Machines:CV_Valve.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -265,7 +275,7 @@
         </TransformGroup>
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
-    <Machines:CV_Valve HorizontalAlignment="Left" Margin="1135,335,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
+    <Machines:CV_Valve HorizontalAlignment="Left" Margin="1135,338,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
       <Machines:CV_Valve.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -295,7 +305,7 @@
         </TransformGroup>
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
-    <Machines:External HorizontalAlignment="Left" Margin="1251,283,0,0" VerticalAlignment="Top" Height="49" Width="50" RenderTransformOrigin="0.5,0.5">
+    <Machines:External HorizontalAlignment="Left" Margin="1251,286,0,0" VerticalAlignment="Top" Height="49" Width="50" RenderTransformOrigin="0.5,0.5">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -327,7 +337,7 @@
     </Machines:DCE_DryingCentrifuge>
     <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="577,656,0,0" VerticalAlignment="Top" Height="130" Width="304" ComponentName="370-41-LT1" TrendName="LEVEL"/>
     <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="930,540,0,0" VerticalAlignment="Top"/>
-    <Machines:WaterPump HorizontalAlignment="Left" Margin="1015,332,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
+    <Machines:WaterPump HorizontalAlignment="Left" Margin="1015,335,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -363,7 +373,7 @@
             VerticalAlignment="Top" 
             ComponentName="370-44-FT1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1140,408,0,0" 
+            Margin="1140,411,0,0" 
             VerticalAlignment="Top" 
             ComponentName="377-21-CV1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -407,7 +417,7 @@
             VerticalAlignment="Top" 
             ComponentName="370-41-LT1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="995,288,0,0" 
+            Margin="995,291,0,0" 
             VerticalAlignment="Top" 
             ComponentName="377-01-MA1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -415,11 +425,11 @@
             VerticalAlignment="Top" 
             ComponentName="373-43-CT1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1140,269,0,0" 
+            Margin="1140,272,0,0" 
             VerticalAlignment="Top" 
             ComponentName="377-23-CV1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1276,221,0,0" 
+            Margin="1276,224,0,0" 
             VerticalAlignment="Top" 
             ComponentName="377-71-ECS2"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -489,16 +499,29 @@
 		VerticalAlignment="Top" 
 		JumpFromLabel="370-41-LT1" 
 		JumpToLabel="371-ACS"/>
-    <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="769,285,0,0" VerticalAlignment="Top" Height="106" Width="177" ComponentName="370-41-LT1" TrendName="LEVEL"/>
+    <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="769,247,0,0" VerticalAlignment="Top" Height="99" Width="177" ComponentName="370-41-LT1" TrendName="LEVEL"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="781,310,0,0" 
+            Margin="781,272,0,0" 
             VerticalAlignment="Top" 
             ComponentName="351-41-LT1"/>
-    <Rectangle StrokeThickness="2" HorizontalAlignment="Left" Height="97" Margin="907,270,0,0" Stroke="#303030" VerticalAlignment="Top" Width="3" RenderTransformOrigin="0.5,0.5"/>
-    <Machines:V01_Agitator Margin="879,355,483,0" VerticalAlignment="Top" Height="25"/>
+    <Rectangle StrokeThickness="2" HorizontalAlignment="Left" Height="97" Margin="907,236,0,0" Stroke="#303030" VerticalAlignment="Top" Width="3" RenderTransformOrigin="0.5,0.5"/>
+    <Machines:V01_Agitator Margin="879,302,483,0" VerticalAlignment="Top" Height="25"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="863,228,0,0" 
+            Margin="863,190,0,0" 
             VerticalAlignment="Top" 
             ComponentName="351-01-MA1" Loaded="DeviceLabel_Loaded"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="716,393,0,0" VerticalAlignment="Top" Color="Water" Width="277" StatusComponent="370-26-CV1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="917,464,0,0" VerticalAlignment="Top" Color="Water" Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="370-26-CV1">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="656,393,0,0" VerticalAlignment="Top" Color="Water" Width="17" StatusComponent="370-26-CV1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="689,393,0,0" VerticalAlignment="Top" Color="Water" Width="10" StatusComponent="370-26-CV1"/>
   </Grid>
 </UserControl>
