--- a/Prevu.Synoptics.V3001-COVERIS/P380.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P380.xaml
@@ -8,10 +8,7 @@
              x:Class="Prevu.Synoptics.P380" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
   <Grid Margin="0,2,0,-2">
-    <Labels:Pipe HorizontalAlignment="Left" Margin="192,188,0,0" VerticalAlignment="Top" Width="98" Color="Water" StatusComponent="390-71-EC1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="326,187,0,0" VerticalAlignment="Top" Width="310" Color="Water" StatusComponent="380-29-CV1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="326,236,0,0" VerticalAlignment="Top" Width="292" Color="Water" StatusComponent="380-28-CV1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="555,264,0,0" VerticalAlignment="Top" Width="158" Color="Water" StatusComponent="380-29-CV1" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="739,673,0,0" VerticalAlignment="Top" Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -21,6 +18,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="326,236,0,0" VerticalAlignment="Top" Width="292" Color="Water" StatusComponent="380-28-CV1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="563,288,0,0" VerticalAlignment="Top" Width="106" Color="Water" StatusComponent="380-28-CV1" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -31,8 +29,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="790,691,0,0" VerticalAlignment="Top" Width="82" Color="Water" StatusComponent="386-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="687,626,0,0" VerticalAlignment="Top" Width="50" Color="Water" StatusComponent="380-22-CV1" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="790,715,0,0" VerticalAlignment="Top" Width="82" Color="Water" StatusComponent="386-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="674,638,0,0" VerticalAlignment="Top" Width="76" Color="Water" StatusComponent="380-22-CV1" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -116,7 +114,7 @@
     <Labels:Pipe HorizontalAlignment="Left" Margin="1166,400,0,0" VerticalAlignment="Top" Width="126" Color="ByProduct" StatusComponent="382-01-MA1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="307,498,0,0" VerticalAlignment="Top" Width="130" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="380-23-CV1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="801,579,0,0" VerticalAlignment="Top" Width="269" StatusComponent="380-01-MA1" PipeHeight="Medium"/>
-    <Rectangle HorizontalAlignment="Left" Height="84" Margin="696,652,0,0" VerticalAlignment="Top" Width="101" Fill="Gray" RadiusX="15" RadiusY="15"/>
+    <Rectangle HorizontalAlignment="Left" Height="84" Margin="696,676,0,0" VerticalAlignment="Top" Width="101" Fill="Gray" RadiusX="15" RadiusY="15"/>
     <Rectangle HorizontalAlignment="Left" Height="36" Margin="751,360,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
       <Rectangle.RenderTransform>
         <TransformGroup>
@@ -150,7 +148,7 @@
         </TransformGroup>
       </Machines:DCE_DryingCentrifuge.RenderTransform>
     </Machines:DCE_DryingCentrifuge>
-    <Machines:WaterPump HorizontalAlignment="Left" Margin="721,659,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
+    <Machines:WaterPump HorizontalAlignment="Left" Margin="721,683,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -233,7 +231,7 @@
             VerticalAlignment="Top" 
             ComponentName="380-22-CV1" RenderTransformOrigin="0.567,-2.17"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="599,667,0,0" 
+            Margin="599,693,0,0" 
             VerticalAlignment="Top" 
             ComponentName="386-01-MA1" RenderTransformOrigin="0.567,-2.17"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -272,22 +270,11 @@
             JumpFromLabel="380-23-CV1" 
             JumpToLabel="529-01-MA1"/>
     <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="863,659,0,0" 
+            Margin="863,683,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="386-01-MA1" 
             JumpToLabel="352-01-MA1"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" Margin="110,156,0,0" VerticalAlignment="Top" JumpFromLabel="380-01-MA1" JumpToLabel="390-71-EC1"/>
     <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="267,209,0,0" VerticalAlignment="Top" Height="62" Width="64" Color="Water" RenderTransformOrigin="0.5,0.5">
-      <Machines:CV_Valve_001.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="-180"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:CV_Valve_001.RenderTransform>
-    </Machines:CV_Valve_001>
-    <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="267,159,0,0" VerticalAlignment="Top" Height="62" Width="64" RenderTransformOrigin="0.5,0.5">
       <Machines:CV_Valve_001.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -302,12 +289,19 @@
 		VerticalAlignment="Top" 
 		ComponentName="380-28-CV1" RenderTransformOrigin="0.567,-2.17"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="262,115,0,0" 
-		VerticalAlignment="Top" 
-		ComponentName="380-29-CV1" RenderTransformOrigin="0.567,-2.17"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
 		Margin="938,497,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="380-02-MA1" RenderTransformOrigin="0.567,-2.17"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="776,636,0,0" VerticalAlignment="Top" Color="Water" Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="0"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:JumpLabel HorizontalAlignment="Left" Margin="813,603,0,0" VerticalAlignment="Top" JumpToLabel="349-01-EC1" JumpFromLabel="386-01-MA1" Direction="Left"/>
   </Grid>
 </UserControl>
