--- a/Prevu.Synoptics.V3001-Coveris/P371.xaml
+++ b/Prevu.Synoptics.V3001-Coveris/P371.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P371" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
   <Grid>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="623,407,0,0" VerticalAlignment="Top" Color="Water" Width="238" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="771,554,0,0" VerticalAlignment="Top" Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -19,7 +19,17 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="741,524,0,0" VerticalAlignment="Top" Color="Water" Width="99" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="651,379,0,0" VerticalAlignment="Top" Color="Water" Width="182" RenderTransformOrigin="0.5,0.5" StatusComponent="348-01-MA1">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="740,469,0,0" VerticalAlignment="Top" Color="Water" Width="120" RenderTransformOrigin="0.5,0.5" StatusComponent="348-01-MA1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="794,375,0,0" VerticalAlignment="Top" Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="349-01-EC1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -52,8 +62,8 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" Margin="769,176,0,0" VerticalAlignment="Top" Width="57" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="347-21-CV1" />
-    <Labels:Pipe HorizontalAlignment="Left" Margin="740,290,0,0" VerticalAlignment="Top" Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="808,552,0,0" VerticalAlignment="Top" Color="Water" Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="740,290,0,0" VerticalAlignment="Top" Color="Water" Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="348-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="800,526,0,0" VerticalAlignment="Top" Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="348-01-MA1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -107,7 +117,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="775,273,0,0" VerticalAlignment="Top" Color="Water" Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="775,273,0,0" VerticalAlignment="Top" Color="Water" Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="348-01-MA1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -117,7 +127,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="583,249,0,0" VerticalAlignment="Top" Color="Water" Width="220" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="558,249,0,0" VerticalAlignment="Top" Color="Water" Width="113" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="926,661,0,0" VerticalAlignment="Top" Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -128,7 +138,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="976,693,0,0" VerticalAlignment="Top" Color="Water" Width="48" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="976,693,0,0" VerticalAlignment="Top" Color="Water" Width="42" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="926,661,0,0" VerticalAlignment="Top" Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -139,8 +149,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1046,693,0,0" VerticalAlignment="Top" Color="Water" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1132,694,0,0" VerticalAlignment="Top" Color="Water" Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1039,693,0,0" VerticalAlignment="Top" Color="Water" Width="37" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1013,694,0,0" VerticalAlignment="Top" Color="Water" Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -150,17 +160,16 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1193,632,0,0" VerticalAlignment="Top" Color="Water" Width="69" RenderTransformOrigin="0.5,0.5" Height="5" StatusComponent="390-71-EC1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1193,756,0,0" VerticalAlignment="Top" Color="Water" Width="69" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1074,632,0,0" VerticalAlignment="Top" Color="Water" Width="69" RenderTransformOrigin="0.5,0.5" Height="5" StatusComponent="390-71-EC1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1074,756,0,0" VerticalAlignment="Top" Color="Water" Width="186" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1"/>
     <Rectangle HorizontalAlignment="Left" Height="46" Margin="813,572,0,0" 
 		VerticalAlignment="Top" Width="170" Fill="Gray" RadiusX="10" RadiusY="10"/>
     <Rectangle HorizontalAlignment="Left" Height="48" Margin="943,590,0,0" 
 		VerticalAlignment="Top" Width="40" Fill="Gray" RadiusX="10" RadiusY="10"/>
     <Machines:WaterPump HorizontalAlignment="Left" Margin="954,683,0,0" VerticalAlignment="Top" Color="None" Height="26" Width="29"/>
-    <Machines:CV_Valve HorizontalAlignment="Left" Margin="1018,678,0,0" VerticalAlignment="Top" Height="35" Width="35"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" Margin="1253,599,0,0" VerticalAlignment="Top" JumpToLabel="380-01-MA1" JumpFromLabel="390-71-EC1"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" Margin="1253,724,0,0" VerticalAlignment="Top" JumpToLabel="370-26-CV1" JumpFromLabel="390-71-EC1"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" Margin="496,217,0,0" VerticalAlignment="Top" JumpToLabel="379-01-MA1" JumpFromLabel="390-71-EC1"/>
+    <Machines:CV_Valve HorizontalAlignment="Left" Margin="1007,678,0,0" VerticalAlignment="Top" Height="35" Width="35"/>
+    <Labels:JumpLabel HorizontalAlignment="Left" Margin="1252,724,0,0" VerticalAlignment="Top" JumpToLabel="370-26-CV1" JumpFromLabel="390-71-EC1"/>
+    <Labels:JumpLabel HorizontalAlignment="Left" Margin="476,217,0,0" VerticalAlignment="Top" JumpToLabel="379-01-MA1" JumpFromLabel="390-71-EC1"/>
     <TextBlock HorizontalAlignment="Left" Margin="645,736,0,53" TextWrapping="Wrap" TextAlignment="Center" FontSize="36" Foreground="Black" FontWeight="Bold" Text="Filtration Unit"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" Margin="840,600,0,0" VerticalAlignment="Top" ComponentName="390-71-EC1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="239,594,0,0" VerticalAlignment="Top" Width="206" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="359-21-CV1" Height="12"/>
@@ -230,21 +239,19 @@
     <Labels:JumpLabel HorizontalAlignment="Left" Margin="435,479,0,0" VerticalAlignment="Top" JumpToLabel="370-41-LT1" JumpFromLabel="371-ACS"/>
     <Labels:JumpLabel HorizontalAlignment="Left" Margin="435,565,0,0" VerticalAlignment="Top" JumpToLabel="370-41-LT1" JumpFromLabel="359-21-CV1"/>
     <TextBlock HorizontalAlignment="Left" Margin="106,647,0,142" TextWrapping="Wrap" TextAlignment="Center" FontSize="36" Foreground="Black" FontWeight="Bold"><Run Language="it-it" Text="Chemicals"/></TextBlock>
-    <Rectangle x:Name="BorderFiltration" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="601,50,192,40"/>
+    <Rectangle x:Name="BorderFiltration" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="580,38,180,109"/>
     <Rectangle x:Name="BorderChemicals" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="80,125,1005,122"/>
     <Machines:WaterPump HorizontalAlignment="Left" Margin="760,143,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals"/>
     <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="781,282,0,0" VerticalAlignment="Top" Height="76" Width="100" ComponentName="" TrendName=""/>
     <Rectangle Stroke="Black" Margin="863,257,555,548" />
     <Machines:WaterPump HorizontalAlignment="Left" Margin="822,397,0,0" VerticalAlignment="Top" Color="None" Height="26" Width="29"/>
     <Rectangle HorizontalAlignment="Left" Height="106" Margin="1018,141,0,0" 
-            VerticalAlignment="Top" Width="187" Fill="Gray" RadiusX="10" RadiusY="10"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" Margin="1066,166,0,0" VerticalAlignment="Top" ComponentName="349-01-EC1"/>
+            VerticalAlignment="Top" Width="179" Fill="Gray" RadiusX="10" RadiusY="10"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" Margin="1063,166,0,0" VerticalAlignment="Top" ComponentName="349-01-EC1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" Margin="842,207,0,0" VerticalAlignment="Top" ComponentName="349-61-LS1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" Margin="741,95,0,0" VerticalAlignment="Top" ComponentName="347-21-CV1"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" Margin="1253,280,0,0" VerticalAlignment="Top" JumpToLabel="494-01-MA1" JumpFromLabel="349-01-EC1"/>
-    <Rectangle Stroke="Black" Margin="674,252,744,553" />
-    <Labels:DeviceLabel HorizontalAlignment="Left" Margin="630,283,0,0" VerticalAlignment="Top" ComponentName="349-62-PS1"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" Margin="1066,82,0,0" VerticalAlignment="Top" ComponentName="349-COMM"/>
+    <Labels:JumpLabel HorizontalAlignment="Left" Margin="1253,280,0,0" VerticalAlignment="Top" JumpToLabel="386-01-MA1" JumpFromLabel="349-01-EC1"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" Margin="1063,82,0,0" VerticalAlignment="Top" ComponentName="349-COMM"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="568,197,0,0" VerticalAlignment="Top" Color="Water" Width="102" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -267,7 +274,65 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" Margin="710,163,0,0" VerticalAlignment="Top" Color="Water" Width="32" RenderTransformOrigin="0.5,0.5" StatusComponent="348-01-MA1"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" Margin="594,81,0,0" VerticalAlignment="Top" ComponentName="348-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="738,249,0,0" VerticalAlignment="Top" Color="Water" Width="65" RenderTransformOrigin="0.5,0.5" StatusComponent="348-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="543,373,0,0" VerticalAlignment="Top" Color="Water" Width="252" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="667,497,0,0" VerticalAlignment="Top" Color="Water" Width="164" RenderTransformOrigin="0.5,0.5" StatusComponent="379-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="694,50,0,0" VerticalAlignment="Top" Width="531" Color="Water" StatusComponent="380-29-CV1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1071,480,0,0" VerticalAlignment="Top" Width="304" Color="Water" StatusComponent="380-29-CV1" RenderTransformOrigin="0.5,0.5">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+      Margin="1107,560,0,0" 
+      VerticalAlignment="Top" 
+      ComponentName="380-29-CV1" RenderTransformOrigin="0.567,-2.17"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="639,107,0,0" VerticalAlignment="Top" Width="114" Color="Water" StatusComponent="380-29-CV1" RenderTransformOrigin="0.5,0.5">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
     <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="633,141,0,0" VerticalAlignment="Top" Height="84" Width="91"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" Margin="633,80,0,0" VerticalAlignment="Top" ComponentName="348-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1156,632,0,0" VerticalAlignment="Top" Color="Water" Width="69" RenderTransformOrigin="0.5,0.5" Height="5" StatusComponent="380-29-CV1"/>
+    <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1112,604,0,0" VerticalAlignment="Top" Height="62" Width="64" RenderTransformOrigin="0.5,0.5">
+      <Machines:CV_Valve_001.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="-180"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:CV_Valve_001.RenderTransform>
+    </Machines:CV_Valve_001>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1099,173,0,0" VerticalAlignment="Top" Width="248" Color="Water" StatusComponent="380-29-CV1" RenderTransformOrigin="0.5,0.5">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
   </Grid>
 </UserControl>
