--- a/Prevu.Synoptics.V3168_Sirplaste/Details/D880.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Details/D880.xaml
@@ -9,13 +9,13 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" 
              x:Class="Prevu.Synoptics.D880" >
-    <Canvas Height="460" Width="275">
-        <Machines:V01_FKS_FlakesSorter_SingleCH Canvas.Left="11" Canvas.Top="44" Height="407" Width="256" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSHA" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="82" Canvas.Top="50"/>
-        <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSH" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="82" Canvas.Top="99" />
-        <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSL" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="90" Canvas.Top="184"/>
-        <Labels:DeviceLabel ComponentName="880-61-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="106" Canvas.Top="248"/>
-        <Machines:VRC_WaterCollectingTank Height="40" Width="39" Canvas.Left="177" Canvas.Top="7" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="880-61-LS4" SignalName="LSHA" Canvas.Left="69" Canvas.Top="11" HorizontalAlignment="Center" VerticalAlignment="Top" SignalPosition="Right"/>
-    </Canvas>
+  <Canvas Height="460" Width="275">
+    <Machines:V01_FKS_FlakesSorter_SingleCH Canvas.Left="11" Canvas.Top="44" Height="407" Width="256" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSHA" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="82" Canvas.Top="50"/>
+    <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSH" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="82" Canvas.Top="99" />
+    <Labels:SignalLabel ComponentName="880-61-LEV" SignalName="LSL" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="90" Canvas.Top="184"/>
+    <Labels:DeviceLabel ComponentName="880-61-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="106" Canvas.Top="248"/>
+    <Machines:VRC_WaterCollectingTank Height="40" Width="39" Canvas.Left="177" Canvas.Top="7" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:SignalLabel ComponentName="880-61-LS4" SignalName="LSHA" Canvas.Left="38" Canvas.Top="11" HorizontalAlignment="Left" VerticalAlignment="Center" SignalPosition="Right"/>
+  </Canvas>
 </UserControl>
