--- a/Prevu.Synoptics.V3168_Sirplaste/Details/D920.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Details/D920.xaml
@@ -9,19 +9,19 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}"
              x:Class="Prevu.Synoptics.D920">
-    <Canvas Height="507" Width="452">
-        <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="80" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="920-61-LEV" SignalName="LSHA" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="49" Canvas.Top="87"/>
-        <Labels:SignalLabel ComponentName="920-61-LEV" SignalName="LSH" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="49" Canvas.Top="142" />
-        <Labels:SignalLabel ComponentName="920-61-LEV" SignalName="LSL" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="61" Canvas.Top="225"/>
-        <Labels:SignalLabel ComponentName="920-62-LEV" SignalName="LSHA" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="261" Canvas.Top="87"/>
-        <Labels:SignalLabel ComponentName="920-62-LEV" SignalName="LSH" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="261" Canvas.Top="142" />
-        <Labels:SignalLabel ComponentName="920-62-LEV" SignalName="LSL" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="270" Canvas.Top="225"/>
-        <Labels:DeviceLabel ComponentName="920-61-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="76" Canvas.Top="289"/>
-        <Labels:DeviceLabel ComponentName="920-62-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="287" Canvas.Top="289"/>
-        <Machines:VRC_WaterCollectingTank Height="45" Width="44" Canvas.Left="352" Canvas.Top="38" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:VRC_WaterCollectingTank Height="73" Width="42" Canvas.Left="56" Canvas.Top="10" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="920-61-LS4" SignalName="LSHA" Canvas.Left="64" Canvas.Top="10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:SignalLabel ComponentName="920-62-LS4" SignalName="LSHA" Canvas.Left="248" Canvas.Top="44" HorizontalAlignment="Center" VerticalAlignment="Center" SignalPosition="Right"/>
-    </Canvas>
+  <Canvas Height="507" Width="452">
+    <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="80" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:SignalLabel ComponentName="920-61-LEV" SignalName="LSHA" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="49" Canvas.Top="87"/>
+    <Labels:SignalLabel ComponentName="920-61-LEV" SignalName="LSH" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="49" Canvas.Top="142" />
+    <Labels:SignalLabel ComponentName="920-61-LEV" SignalName="LSL" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="61" Canvas.Top="225"/>
+    <Labels:SignalLabel ComponentName="920-62-LEV" SignalName="LSHA" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="261" Canvas.Top="87"/>
+    <Labels:SignalLabel ComponentName="920-62-LEV" SignalName="LSH" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="261" Canvas.Top="142" />
+    <Labels:SignalLabel ComponentName="920-62-LEV" SignalName="LSL" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="270" Canvas.Top="225"/>
+    <Labels:DeviceLabel ComponentName="920-61-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="76" Canvas.Top="289"/>
+    <Labels:DeviceLabel ComponentName="920-62-LEV" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="287" Canvas.Top="289"/>
+    <Machines:VRC_WaterCollectingTank Height="45" Width="44" Canvas.Left="352" Canvas.Top="38" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Machines:VRC_WaterCollectingTank Height="73" Width="42" Canvas.Left="56" Canvas.Top="10" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:SignalLabel ComponentName="920-61-LS4" SignalName="LSHA" Canvas.Left="64" Canvas.Top="10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:SignalLabel ComponentName="920-62-LS4" SignalName="LSHA" Canvas.Left="202" Canvas.Top="44" HorizontalAlignment="Left" VerticalAlignment="Center" SignalPosition="Right"/>
+  </Canvas>
 </UserControl>
