--- a/Prevu.Synoptics.V4659_Steinbais/L0/Pages/L0_P508.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L0/Pages/L0_P508.xaml
@@ -205,5 +205,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
+    <Machines:V01_Radar Canvas.Left="1091" Canvas.Top="546" Height="50" Width="34" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_Radar Canvas.Left="1266" Canvas.Top="546" Height="50" Width="34" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L0+997-41-LT1" Canvas.Left="1027" Canvas.Top="494" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="L0+997-42-LT1" Canvas.Left="1274" Canvas.Top="494" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
